[project]
name = "xing"
version = "0.0.3"
description = "Yet Another PoC Framework - 漏洞验证、协议识别、弱口令爆破框架"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "ice.liao", email = "ice.liao@tophant.com" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "urllib3>=1.26.0,<3.0",
    "requests>=2.31.0",
    "lxml>=5.0.0",
    "colorlog>=6.8.0",
    "requests-ntlm>=1.3.0",
    "pycryptodomex>=3.20.0",
    "pymongo>=3.13.0,<5.0",
    "dnslib>=0.9.24",
    "Flask>=3.0.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
xing = "xing.main:main"

[project.urls]
Homepage = "https://github.com/phpmac/ARL-NPoC"
Repository = "https://github.com/phpmac/ARL-NPoC"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xing"]

[tool.hatch.build.targets.sdist]
include = [
    "xing/**",
    "README.md",
    "LICENSE",
]

